Updated notebook with the new GitHub link

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -512,7 +512,7 @@
    "metadata": {},
    "source": [
     "<br>  \n",
-    "### Pipeline code (only accessible from within the RIVM intranet):"
+    "### Pipeline code with unique methodological \"fingerprint\":"
    ]
   },
   {
@@ -526,7 +526,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "echo -e \"This is the link to the code used for this analysis:\\thttps://gitl01-int-p.rivm.nl/schmitzd/PZN/tree/$(git log -n 1 --pretty=format:\"%H\")\" \n",
+    "echo -e \"This is the link to the code used for this analysis:\\thttps://github.com/DennisSchmitz/Jovian/tree/$(git log -n 1 --pretty=format:\"%H\")\" \n",
     "echo -e \"This code with unique fingerprint $(git log -n1 --pretty=format:\"%H\") was committed by $(git log -n1 --pretty=format:\"%an <%ae>\") at $(git log -n1 --pretty=format:\"%ad\")\""
    ]
   },
@@ -643,7 +643,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python [conda env:Jovian_master] *",
    "language": "python",
