--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -616,7 +616,7 @@
    "metadata": {},
    "source": [
     "#### Link to Gitlab repo (only accessible from within the RIVM network):  \n",
-    "https://gitl01-int-p.rivm.nl/schmitzd/PZN"
+    "https://github.com/DennisSchmitz/Jovian"
    ]
   },
   {
@@ -643,7 +643,7 @@
   }
  ],
  "metadata": {
-  "hide_input": false,
+  "hide_input": true,
   "kernelspec": {
    "display_name": "Python [conda env:Jovian_master] *",
    "language": "python",
