Disabled warning from yaml library

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -17,7 +17,7 @@
     "<br>\n",
     "<i><b>In order to load in the data, click the \"Cell\" button above, and then press \"Run all\".</b></i>  \n",
     "<br>\n",
-    "You can view the Jovian rulegraph by clicking [here](results/rulegraph_Jovian.png)."
+    "You can view the Jovian rulegraph by clicking [here](files/GitHub_images/rulegraph_Jovian.png)."
    ]
   },
   {
@@ -131,11 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note (2019-03-28): There is a bug between Jupyter notebook and Tornado (a dependency of Jupyter). This causes the links below to give a 403 error in the Chrome browser, it does work in Firefox. This is a known bug and will be updated shortly by the developers of Tornado. See:  \n",
-    "https://github.com/jupyter/notebook/issues/4498  \n",
-    "https://github.com/jupyterlab/jupyterlab/issues/6106  \n",
-    "https://github.com/jupyterlab/jupyterlab/issues/6131  \n",
-    "https://github.com/jupyter/terminado/issues/62  "
+    "Note (2019-03-28): There is a bug between Jupyter notebook and Tornado (a dependency of Jupyter). This causes the links below to give a 403 error in the Chrome browser, it does work in Firefox. This is a known bug and will be updated shortly by the developers of Tornado. See [here](https://github.com/jupyter/notebook/issues/4498), [here](https://github.com/jupyterlab/jupyterlab/issues/6106), [here](https://github.com/jupyterlab/jupyterlab/issues/6131) and [here](https://github.com/jupyter/terminado/issues/62)."
    ]
   },
   {
