Added onSucces clause to remove temp files

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -435,7 +435,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Snakemake summary statistics\n",
+    "### Sample sheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cat sample_sheet.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Snakemake summary statistics\n",
     "[Open Snakemake summary statistics in seperate tab by clicking here](snakemake_report.html#stats)"
    ]
   },
