--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note (2019-03-28): There is a bug between Jupyter notebook and Tornado (a dependency of Jupyter). This causes the links below to give a 403 error in the Chrome browser, it does work in Firefox. This is a known bug and will be updated shortly by the developers of Tornado. See [here](https://github.com/jupyter/notebook/issues/4498), [here](https://github.com/jupyterlab/jupyterlab/issues/6106), [here](https://github.com/jupyterlab/jupyterlab/issues/6131) and [here](https://github.com/jupyter/terminado/issues/62)."
+    "**N.B. there is a known bug that causes the Chrome browser to give `403 : Forbidden` in the links below. See [here](https://github.com/DennisSchmitz/Jovian/issues/10) for additional information. A workaround is to use Firefox.**"
    ]
   },
   {
@@ -528,7 +528,7 @@
    "metadata": {},
    "source": [
     "<br>  \n",
-    "### Pipeline code with unique methodological \"fingerprint\":"
+    "### Unique methodological \"fingerprint\":"
    ]
   },
   {
@@ -542,8 +542,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "echo -e \"This is the link to the code used for this analysis:\\thttps://github.com/DennisSchmitz/Jovian/tree/$(git log -n 1 --pretty=format:\"%H\")\" \n",
-    "echo -e \"This code with unique fingerprint $(git log -n1 --pretty=format:\"%H\") was committed by $(git log -n1 --pretty=format:\"%an <%ae>\") at $(git log -n1 --pretty=format:\"%ad\")\""
+    "cat results/git_log.txt"
    ]
   },
   {
@@ -631,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Link to Gitlab repo (only accessible from within the RIVM network):  \n",
+    "#### Link to GitHub repo:  \n",
     "https://github.com/DennisSchmitz/Jovian"
    ]
   },
