--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -273,8 +273,17 @@
    "metadata": {},
    "source": [
     "___\n",
-    "## Virus typing tool output\n",
+    "## Virus typing results\n",
     "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**_The virus typing outputs are currently not automated via Jovian due to overloading and crashing the webservice, further information can be found [here](https://github.com/DennisSchmitz/Jovian/issues/29). A long-term solution is being worked on._**\n",
+    "\n",
+    "**_In case you do want these results, please see [here](https://github.com/DennisSchmitz/Jovian/issues/29 for instructions)._**"
    ]
   },
   {
@@ -295,15 +304,15 @@
    },
    "outputs": [],
    "source": [
+    "%cat data/virus_typing_tables/*_NoV.csv > results/all_NoV-TT.tsv # See issue #29, temporary work-around\n",
+    "\n",
     "if os.path.exists(\"results/all_NoV-TT.tsv\") and os.path.getsize(\"results/all_NoV-TT.tsv\") > 0:\n",
     "    NoV_TT_df = pd.read_csv(\"results/all_NoV-TT.tsv\" , sep = \",\")\n",
     "elif os.path.exists(\"results/all_NoV-TT.tsv\") and os.path.getsize(\"results/all_NoV-TT.tsv\") == 0:\n",
     "    print(\"No viral scaffolds with species equal to \\\"Norwalk virus\\\" were found in this dataset.\")\n",
     "    NoV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Norwalk virus\", \"species\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_NoV-TT.tsv\\\" does not exist. Something went wrong. Please see the logfiles below:\")\n",
-    "    print(\"\\t\\\"logs/Viral_typing_[sample_name].log\\\"\")\n",
-    "    print(\"\\t\\\"logs/Concat_TT_files.log\\\"\")\n",
+    "    print(\"The file \\\"results/all_NoV-TT.tsv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    NoV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(NoV_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -326,18 +335,80 @@
    },
    "outputs": [],
    "source": [
+    "%cat data/virus_typing_tables/*_EV.csv > results/all_EV-TT.tsv # See issue #29, temporary work-around\n",
+    "\n",
     "if os.path.exists(\"results/all_EV-TT.tsv\") and os.path.getsize(\"results/all_EV-TT.tsv\") > 0:\n",
     "    EV_TT_df = pd.read_csv(\"results/all_EV-TT.tsv\" , sep = \",\")\n",
     "elif os.path.exists(\"results/all_EV-TT.tsv\") and os.path.getsize(\"results/all_EV-TT.tsv\") == 0:\n",
     "    print(\"No viral scaffolds with family equal to \\\"Picornaviridae\\\" were found in this dataset.\")\n",
     "    EV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Picornaviridae\", \"family\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_EV-TT.tsv\\\" does not exist. Something went wrong. Please see the logfiles below:\")\n",
-    "    print(\"\\t\\\"logs/Viral_typing_[sample_name].log\\\"\")\n",
-    "    print(\"\\t\\\"logs/Concat_TT_files.log\\\"\")\n",
+    "    print(\"The file \\\"results/all_EV-TT.tsv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    EV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(EV_TT_df, show_toolbar=False, grid_options=grid_options)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hepatitis A typing tool output:  \n",
+    "[Link to the hepatatis A typing tool](https://www.rivm.nl/mpf/typingtool/hav/)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "%cat data/virus_typing_tables/*_HAV.csv > results/all_HAV-TT.tsv # See issue #29, temporary work-around\n",
+    "\n",
+    "if os.path.exists(\"results/all_HAV-TT.tsv\") and os.path.getsize(\"results/all_HAV-TT.tsv\") > 0:\n",
+    "    HAV_TT_df = pd.read_csv(\"results/all_HAV-TT.tsv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_HAV-TT.tsv\") and os.path.getsize(\"results/all_HAV-TT.tsv\") == 0:\n",
+    "    print(\"No viral scaffolds with genus equal to \\\"Hepatovirus\\\" were found in this dataset.\")\n",
+    "    HAV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Hepatovirus\", \"genus\", \"scaffolds\", \"found\"]})\n",
+    "else:\n",
+    "    print(\"The file \\\"results/all_HAV-TT.tsv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    HAV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
+    "\n",
+    "qgrid.show_grid(HAV_TT_df, show_toolbar=False, grid_options=grid_options)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hepatitis E typing tool output:  \n",
+    "[Link to the hepatatis E typing tool](https://www.rivm.nl/mpf/typingtool/hev/)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "%cat data/virus_typing_tables/*_HEV.csv > results/all_HEV-TT.tsv # See issue #29, temporary work-around\n",
+    "\n",
+    "if os.path.exists(\"results/all_HEV-TT.tsv\") and os.path.getsize(\"results/all_HEV-TT.tsv\") > 0:\n",
+    "    HEV_TT_df = pd.read_csv(\"results/all_HEV-TT.tsv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_HEV-TT.tsv\") and os.path.getsize(\"results/all_HEV-TT.tsv\") == 0:\n",
+    "    print(\"No viral scaffolds with genus equal to \\\"Orthohepevirus\\\" were found in this dataset.\")\n",
+    "    HEV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Orthohepevirus\", \"genus\", \"scaffolds\", \"found\"]})\n",
+    "else:\n",
+    "    print(\"The file \\\"results/all_HEV-TT.tsv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    HEV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
+    "\n",
+    "qgrid.show_grid(HEV_TT_df, show_toolbar=False, grid_options=grid_options)"
    ]
   },
   {
