cleaned up a bit

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -281,9 +281,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**_The virus typing outputs are currently not automated via Jovian due to overloading and crashing the webservice, further information can be found [here](https://github.com/DennisSchmitz/Jovian/issues/29). A long-term solution is being worked on._**\n",
+    "The virus typing outputs are currently not automatically generated via Jovian due to overloading and crashing the web-service (further information can be found [here](https://github.com/DennisSchmitz/Jovian/issues/29)).\n",
     "\n",
-    "**_In case you do want these results, please see [here](https://github.com/DennisSchmitz/Jovian/issues/29 for instructions)._**"
+    "A long-term solution is being worked on, as a work-around we've included scripts to generate these data separately. However, we kindly ask you to <u>**use this sparingly**</u> as to not overload and break the web-service. Instructions on how to generate these data can be found [here](https://github.com/DennisSchmitz/Jovian/issues/29)."
    ]
   },
   {
@@ -304,15 +304,13 @@
    },
    "outputs": [],
    "source": [
-    "%cat data/virus_typing_tables/*_NoV.csv > results/all_NoV-TT.tsv # See issue #29, temporary work-around\n",
-    "\n",
-    "if os.path.exists(\"results/all_NoV-TT.tsv\") and os.path.getsize(\"results/all_NoV-TT.tsv\") > 0:\n",
-    "    NoV_TT_df = pd.read_csv(\"results/all_NoV-TT.tsv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_NoV-TT.tsv\") and os.path.getsize(\"results/all_NoV-TT.tsv\") == 0:\n",
+    "if os.path.exists(\"results/all_NoV-TT.csv\") and os.path.getsize(\"results/all_NoV-TT.csv\") > 0:\n",
+    "    NoV_TT_df = pd.read_csv(\"results/all_NoV-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_NoV-TT.csv\") and os.path.getsize(\"results/all_NoV-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with species equal to \\\"Norwalk virus\\\" were found in this dataset.\")\n",
     "    NoV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Norwalk virus\", \"species\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_NoV-TT.tsv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_NoV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    NoV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(NoV_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -335,15 +333,13 @@
    },
    "outputs": [],
    "source": [
-    "%cat data/virus_typing_tables/*_EV.csv > results/all_EV-TT.tsv # See issue #29, temporary work-around\n",
-    "\n",
-    "if os.path.exists(\"results/all_EV-TT.tsv\") and os.path.getsize(\"results/all_EV-TT.tsv\") > 0:\n",
-    "    EV_TT_df = pd.read_csv(\"results/all_EV-TT.tsv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_EV-TT.tsv\") and os.path.getsize(\"results/all_EV-TT.tsv\") == 0:\n",
+    "if os.path.exists(\"results/all_EV-TT.csv\") and os.path.getsize(\"results/all_EV-TT.csv\") > 0:\n",
+    "    EV_TT_df = pd.read_csv(\"results/all_EV-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_EV-TT.csv\") and os.path.getsize(\"results/all_EV-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with family equal to \\\"Picornaviridae\\\" were found in this dataset.\")\n",
     "    EV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Picornaviridae\", \"family\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_EV-TT.tsv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_EV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    EV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(EV_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -366,15 +362,13 @@
    },
    "outputs": [],
    "source": [
-    "%cat data/virus_typing_tables/*_HAV.csv > results/all_HAV-TT.tsv # See issue #29, temporary work-around\n",
-    "\n",
-    "if os.path.exists(\"results/all_HAV-TT.tsv\") and os.path.getsize(\"results/all_HAV-TT.tsv\") > 0:\n",
-    "    HAV_TT_df = pd.read_csv(\"results/all_HAV-TT.tsv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_HAV-TT.tsv\") and os.path.getsize(\"results/all_HAV-TT.tsv\") == 0:\n",
+    "if os.path.exists(\"results/all_HAV-TT.csv\") and os.path.getsize(\"results/all_HAV-TT.csv\") > 0:\n",
+    "    HAV_TT_df = pd.read_csv(\"results/all_HAV-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_HAV-TT.csv\") and os.path.getsize(\"results/all_HAV-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with genus equal to \\\"Hepatovirus\\\" were found in this dataset.\")\n",
     "    HAV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Hepatovirus\", \"genus\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_HAV-TT.tsv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_HAV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    HAV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(HAV_TT_df, show_toolbar=False, grid_options=grid_options)"
@@ -397,15 +391,13 @@
    },
    "outputs": [],
    "source": [
-    "%cat data/virus_typing_tables/*_HEV.csv > results/all_HEV-TT.tsv # See issue #29, temporary work-around\n",
-    "\n",
-    "if os.path.exists(\"results/all_HEV-TT.tsv\") and os.path.getsize(\"results/all_HEV-TT.tsv\") > 0:\n",
-    "    HEV_TT_df = pd.read_csv(\"results/all_HEV-TT.tsv\" , sep = \",\")\n",
-    "elif os.path.exists(\"results/all_HEV-TT.tsv\") and os.path.getsize(\"results/all_HEV-TT.tsv\") == 0:\n",
+    "if os.path.exists(\"results/all_HEV-TT.csv\") and os.path.getsize(\"results/all_HEV-TT.csv\") > 0:\n",
+    "    HEV_TT_df = pd.read_csv(\"results/all_HEV-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_HEV-TT.csv\") and os.path.getsize(\"results/all_HEV-TT.csv\") == 0:\n",
     "    print(\"No viral scaffolds with genus equal to \\\"Orthohepevirus\\\" were found in this dataset.\")\n",
     "    HEV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Orthohepevirus\", \"genus\", \"scaffolds\", \"found\"]})\n",
     "else:\n",
-    "    print(\"The file \\\"results/all_HEV-TT.tsv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    print(\"The file \\\"results/all_HEV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
     "    HEV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
     "\n",
     "qgrid.show_grid(HEV_TT_df, show_toolbar=False, grid_options=grid_options)"
