Updated author list and references

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -686,7 +686,8 @@
     "|Tabix|NA|www.htslib.org/doc/tabix.html|\n",
     "|tree|NA|http://mama.indstate.edu/users/ice/tree/|\n",
     "|Trimmomatic|Bolger, A.M., M. Lohse, and B. Usadel, Trimmomatic: a flexible trimmer for Illumina sequence data. Bioinformatics, 2014. 30(15): p. 2114-20.|www.usadellab.org/cms/?page=trimmomatic|\n",
-    "|Virus-Host Database|Mihara, T., Nishimura, Y., Shimizu, Y., Nishiyama, H., Yoshikawa, G., Uehara, H., ... & Ogata, H. (2016). Linking virus genomes with host taxonomy. Viruses, 8(3), 66.|http://www.genome.jp/virushostdb/note.html|"
+    "|Virus-Host Database|Mihara, T., Nishimura, Y., Shimizu, Y., Nishiyama, H., Yoshikawa, G., Uehara, H., ... & Ogata, H. (2016). Linking virus genomes with host taxonomy. Viruses, 8(3), 66.|http://www.genome.jp/virushostdb/note.html|\n",
+    "|Virus typing tools|Kroneman, A., Vennema, H., Deforche, K., Avoort, H. V. D., Penaranda, S., Oberste, M. S., ... & Koopmans, M. (2011). An automated genotyping tool for enteroviruses and noroviruses. Journal of Clinical Virology, 51(2), 121-125.|https://www.ncbi.nlm.nih.gov/pubmed/21514213|"
    ]
   },
   {
@@ -707,9 +708,12 @@
     "- Robert Verhagen ([RIVM](https://www.rivm.nl/en))  \n",
     "- Thierry Janssens ([RIVM](https://www.rivm.nl/en))  \n",
     "- Jeroen Cremer ([RIVM](https://www.rivm.nl/en))  \n",
+    "- Florian Zwagemaker ([RIVM](https://www.rivm.nl/en))  \n",
+    "- Mark Kroon ([RIVM](https://www.rivm.nl/en))  \n",
+    "- Erwin van Wieringen ([RIVM](https://www.rivm.nl/en))  \n",
     "- Harry Vennema ([RIVM](https://www.rivm.nl/en))  \n",
     "- Annelies Kroneman ([RIVM](https://www.rivm.nl/en))  \n",
-    "- Marion Koopmans ([EMC](https://www6.erasmusmc.nl/viroscience/))  "
+    "- Marion Koopmans ([EMC](https://www6.erasmusmc.nl/viroscience/)) "
    ]
   },
   {
