functions file and remember installation choices

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -23,6 +23,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bin/set_symlink.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "deletable": false,
     "deleteable": false,
@@ -725,7 +735,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python [conda env:Jovian_master] *",
    "language": "python",
