Fixed TTs, more stable, also added RVA TT

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -330,6 +330,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Rotavirus A typing tool output:  \n",
+    "[Link to the Rotavirus A typing tool](https://www.rivm.nl/mpf/typingtool/rotavirusa/)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "if os.path.exists(\"results/all_RVA-TT.csv\") and os.path.getsize(\"results/all_RVA-TT.csv\") > 0:\n",
+    "    RVA_TT_df = pd.read_csv(\"results/all_RVA-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_RVA-TT.csv\") and os.path.getsize(\"results/all_RVA-TT.csv\") == 0:\n",
+    "    print(\"No viral scaffolds with genus equal to \\\"Rotavirus\\\" were found in this dataset.\")\n",
+    "    RVA_TT_df = pd.DataFrame({'NA' : [\"No\", \"Rotavirus\", \"genus\", \"scaffolds\", \"found\"]})\n",
+    "else:\n",
+    "    print(\"The file \\\"results/all_RVA-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    RVA_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
+    "\n",
+    "qgrid.show_grid(RVA_TT_df, show_toolbar=False, grid_options=grid_options)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Enterovirus typing tool output:  \n",
     "[Link to the enterovirus typing tool](https://www.rivm.nl/mpf/typingtool/enterovirus/)  "
    ]
@@ -735,7 +764,7 @@
   }
  ],
  "metadata": {
-  "hide_input": false,
+  "hide_input": true,
   "kernelspec": {
    "display_name": "Python [conda env:Jovian_master] *",
    "language": "python",
