First stage of removing hardcoded logging

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -284,9 +284,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The virus typing outputs are currently not automatically generated via Jovian due to overloading and crashing the web-service (further information can be found [here](https://github.com/DennisSchmitz/Jovian/issues/29)).\n",
+    "The virus typing outputs are currently not automatically generated via Jovian due to overloading and crashing the web-service (further information can be found [here](https://github.com/DennisSchmitz/Jovian/issues/29) and [here](https://github.com/DennisSchmitz/Jovian/issues/51)).\n",
     "\n",
-    "A long-term solution is being worked on, as a work-around we've included scripts to generate these data separately. However, we kindly ask you to <u>**use this sparingly**</u> as to not overload and break the web-service. Instructions on how to generate these data can be found [here](https://github.com/DennisSchmitz/Jovian/issues/29)."
+    "A long-term solution is being worked on, as a work-around we've included scripts to generate these data separately. However, we kindly ask you to <u>**use this sparingly**</u> as to not overload and break the web-service. Instructions on how to generate these data can be found [here](https://github.com/DennisSchmitz/Jovian/issues/29) and [here](https://github.com/DennisSchmitz/Jovian/issues/51)."
    ]
   },
   {
@@ -573,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Software list in Jovian_master environment:"
+    "### Full software list in \"Jovian_master\" environment:"
    ]
   },
   {
@@ -609,13 +609,11 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "echo -e \"==> NCBI NT Database: <==\\n$(ls -lah /mnt/db/NT_Database/)\"\n",
-    "echo -e \"\\n==> NCBI NR Database: <==\\n$(ls -lah /mnt/db/NR_Database/)\"\n",
-    "echo -e \"\\n==> NCBI Taxdb Database: <==\\n$(ls -lah /mnt/db/taxdb/)\"\n",
-    "echo -e \"\\n==> NCBI new_taxdump Database: <==\\n$(ls -lah /mnt/db/new_taxdump/)\"\n",
-    "echo -e \"\\n==> Krona Taxonomy Database: <==\\n$(ls -lah /mnt/db/taxonomy_krona/)\"\n",
-    "echo -e \"\\n==> Homo Sapiens NCBI GRch38 NO DECOY genome: <==$(ls -lah /mnt/db/Homo_sapiens_NO_DECOY/NCBI/GRCh38/Sequence/Bowtie2Index/)\"\n",
-    "echo -e \"\\n==> Virus-Host Interaction Database: <==\\n$(ls -lah /mnt/db/Virus-Host_interaction_DB/)\""
+    "echo -e \"==> Homo Sapiens NCBI GRch38 NO DECOY genome: <==\\n$(ls -lah $(grep \"    HuGo_ref:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\"))\\n\"\n",
+    "echo -e \"\\n==> Virus-Host Interaction Database: <==\\n$(ls -lah $(grep \"    virusHostDB:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\"))\\n\"\n",
+    "echo -e \"\\n==> Krona Taxonomy Database: <==\\n$(ls -lah $(grep \"    Krona_taxonomy:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\"))\\n\"\n",
+    "echo -e \"\\n==> NCBI new_taxdump Database: <==\\n$(ls -lah $(grep \"    NCBI_new_taxdump_rankedlineage:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\") $(grep \"    NCBI_new_taxdump_host:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\"))\\n\"\n",
+    "echo -e \"\\n==> NCBI Databases as specified in ~/.ncbirc: <==\\n$(ls -lah $(grep \"BLASTDB=\" ~/.ncbirc | cut -f 2 -d \"=\" | tr \"::\" \" \"))\\n\""
    ]
   },
   {
@@ -645,7 +643,7 @@
    "metadata": {},
    "source": [
     "<br>  \n",
-    "### Snakemake config file (containing pipeline parameters):"
+    "### Snakemake config files:"
    ]
   },
   {
@@ -659,10 +657,12 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "echo -e \"________________________________________________________________________________\\n\\tContents of the config.yaml (contains the Snakemake CLI parameters):\\n________________________________________________________________________________\"\n",
-    "cat profile/config.yaml\n",
-    "echo -e \"________________________________________________________________________________\\n\\tContents of the pipeline_parameters.yaml (contains the parameters for the pipeline software):\\n________________________________________________________________________________\"\n",
-    "cat profile/pipeline_parameters.yaml"
+    "for file in profile/*.yaml\n",
+    "do\n",
+    "    echo -e \"\\n==> Contents of file \\\"${file}\\\": <==\"\n",
+    "    cat ${file}\n",
+    "    echo -e \"\\n\\n\"\n",
+    "done"
    ]
   },
   {
