Improved logging, removed hardcoded parts, onstart

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -587,7 +587,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cat envs/Jovian_master_environment.yaml"
+    "cat results/log_conda.txt"
    ]
   },
   {
@@ -609,11 +609,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "echo -e \"==> Homo Sapiens NCBI GRch38 NO DECOY genome: <==\\n$(ls -lah $(grep \"    HuGo_ref:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\"))\\n\"\n",
-    "echo -e \"\\n==> Virus-Host Interaction Database: <==\\n$(ls -lah $(grep \"    virusHostDB:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\"))\\n\"\n",
-    "echo -e \"\\n==> Krona Taxonomy Database: <==\\n$(ls -lah $(grep \"    Krona_taxonomy:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\"))\\n\"\n",
-    "echo -e \"\\n==> NCBI new_taxdump Database: <==\\n$(ls -lah $(grep \"    NCBI_new_taxdump_rankedlineage:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\") $(grep \"    NCBI_new_taxdump_host:\" profile/pipeline_parameters.yaml | cut -f 2 -d \":\"))\\n\"\n",
-    "echo -e \"\\n==> NCBI Databases as specified in ~/.ncbirc: <==\\n$(ls -lah $(grep \"BLASTDB=\" ~/.ncbirc | cut -f 2 -d \"=\" | tr \"::\" \" \"))\\n\""
+    "cat results/log_db.txt"
    ]
   },
   {
@@ -635,7 +631,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cat results/git_log.txt"
+    "cat results/log_git.txt"
    ]
   },
   {
@@ -652,17 +648,13 @@
    "metadata": {
     "deletable": false,
     "deleteable": false,
-    "editable": false
+    "editable": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "%%bash\n",
-    "for file in profile/*.yaml\n",
-    "do\n",
-    "    echo -e \"\\n==> Contents of file \\\"${file}\\\": <==\"\n",
-    "    cat ${file}\n",
-    "    echo -e \"\\n\\n\"\n",
-    "done"
+    "cat results/log_config.txt"
    ]
   },
   {
