Updated README and fixed #9

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -13,17 +13,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>If you want to show or hide the programming code, press the button with the eye in it on the toolbar above.</b>  \n",
+    "### Instructions:  \n",
+    "**- Data should be automatically loaded when you first start this notebook, however, it can take a couple of minutes (depending on the size of your dataset). As long as the circle in the top right corner is not-empty (i.e. completely filled), the data is still being loaded. If something went wrong and you want to manually visualize all the data, first click the `Cell` button on the top left corner of this website and then click `Run all`.**  \n",
     "<br>\n",
-    "<i><b>In order to load in the data, click the \"Cell\" button above, and then press \"Run all\".</b></i>  \n",
+    "**- If you want to show or hide the programming code, press the button with the eye in it on the toolbar above.**  \n",
     "<br>\n",
-    "You can view the Jovian rulegraph by clicking [here](files/GitHub_images/rulegraph_Jovian.png)."
+    "You can view the graph displaying all Jovian's disparate processes by clicking [here](files/GitHub_images/rulegraph_Jovian.png)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -36,7 +39,8 @@
    "metadata": {
     "deletable": false,
     "deleteable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -85,6 +89,7 @@
     "deletable": false,
     "deleteable": false,
     "editable": false,
+    "init_cell": true,
     "scrolled": false
    },
    "outputs": [],
@@ -120,6 +125,7 @@
     "deletable": false,
     "deleteable": false,
     "editable": false,
+    "init_cell": true,
     "scrolled": false
    },
    "outputs": [],
@@ -142,7 +148,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -165,10 +172,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read-based composition of analysed samples\n",
+    "### Read-based composition of analyzed samples\n",
     "\n",
-    "Quantifies all annotations made by Jovian by counting reads that were:  \n",
-    "Discarded due to low quality, removed due to being alignable to the human genome, classified by Megablast, and finally reads that could not be assembled into contigs longer than the user specified length (default is 500 nt) and were therefore not included in the classification steps (\"remaining\")."
+    "**Low-quality** reads are those that did not meet the stringency settings as specified in the config file.  \n",
+    "**Unclassified** reads are those that could not be assigned to a taxa.  \n",
+    "**Remaining** reads are those that could not be assembled into contigs longer than the user specified minimum contig length.  "
    ]
   },
   {
@@ -177,6 +185,7 @@
    "metadata": {
     "deletable": false,
     "editable": false,
+    "init_cell": true,
     "scrolled": false
    },
    "outputs": [],
@@ -199,7 +208,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -227,6 +237,7 @@
    "metadata": {
     "deletable": false,
     "editable": false,
+    "init_cell": true,
     "scrolled": true
    },
    "outputs": [],
@@ -256,7 +267,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -303,7 +315,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -332,7 +345,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -361,7 +375,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -390,7 +405,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -419,7 +435,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -449,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "N.B. Depending on the depth of coverage of the contig this can be <b>(very) slow, or downright crash your browser</b>. This is a <b>client-sided</b> problem, meaning, your computer isn't powerful enough. This cannot be fixed by us developers.  "
+    "N.B. Depending on the depth of coverage of the selected contig it can be <b>(very) slow, or downright crash your browser</b>. This is a <b>client-sided</b> problem, meaning, your computer isn't powerful enough.  "
    ]
   },
   {
@@ -457,7 +474,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -469,7 +487,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -502,7 +521,8 @@
    "metadata": {
     "deletable": false,
     "deleteable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -538,7 +558,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -559,7 +580,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -582,7 +604,8 @@
    "metadata": {
     "deletable": false,
     "deleteable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -604,7 +627,8 @@
    "metadata": {
     "deletable": false,
     "deleteable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -626,7 +650,8 @@
    "metadata": {
     "deletable": false,
     "deleteable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -649,6 +674,7 @@
     "deletable": false,
     "deleteable": false,
     "editable": false,
+    "init_cell": true,
     "scrolled": true
    },
    "outputs": [],
@@ -749,6 +775,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Initialization Cell",
   "hide_input": true,
   "kernelspec": {
    "display_name": "Python [conda env:Jovian_master] *",
