--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "___\n",
     "## Quality control metrics report (MultiQC):\n",
-    "[Open MultiQC graph in seperate tab by clicking here](results/multiqc.html)  \n",
+    "[Open MultiQC graph in separate tab by clicking here](results/multiqc.html)  \n",
     "___"
    ]
   },
@@ -105,7 +105,8 @@
    "metadata": {},
    "source": [
     "### Read-based composition of analyzed samples:\n",
-    "\n",
+    "[Open the barchart in separate tab by clicking here](results/Sample_composition_graph.html)  \n",
+    "<br>\n",
     "**Low-quality** reads are those that did not meet the stringency settings as specified in the config file.  \n",
     "**Unclassified** reads are those that could not be assigned to a taxa.  \n",
     "**Remaining** reads are those that could not be assembled into contigs longer than the user specified minimum contig length. "
@@ -141,7 +142,7 @@
    "source": [
     "\n",
     "### Interactive metagenomics overview (Krona):\n",
-    "[Open Krona graph in seperate tab by clicking here](results/krona.html)  "
+    "[Open Krona graph in separate tab by clicking here](results/krona.html)  "
    ]
   },
   {
@@ -167,7 +168,7 @@
    "metadata": {},
    "source": [
     "### Summary heatmaps:\n",
-    "[Open heatmaps in seperate tab by clicking here](results/Heatmap_index.html)"
+    "[Open heatmaps in separate tab by clicking here](results/Heatmap_index.html)"
    ]
   },
   {
@@ -569,7 +570,7 @@
    "metadata": {},
    "source": [
     "### Snakemake summary statistics\n",
-    "[Open Snakemake summary statistics in seperate tab by clicking here](snakemake_report.html#stats)"
+    "[Open Snakemake summary statistics in separate tab by clicking here](snakemake_report.html#stats)"
    ]
   },
   {
