Added more TTs to portal

--- a/Notebook_portal.ipynb
+++ b/Notebook_portal.ipynb
@@ -122,6 +122,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bash jovian --virus-typing EV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bash jovian --virus-typing RVA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bash jovian --virus-typing HAV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bash jovian --virus-typing HEV"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
