--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -791,7 +791,7 @@
    "metadata": {},
    "source": [
     "___\n",
-    "Jovian is available on [Github](https://github.com/DennisSchmitz/Jovian). The virus-typing tools are public services hosted by the [RIVM](https://www.rivm.nl/en).\n",
+    "Jovian is available on [Github](https://github.com/DennisSchmitz/Jovian). The virus-typing tools are public services hosted by the [RIVM](https://www.rivm.nl/en) and developed by [Emweb](https://www.emweb.be/) and the [RIVM](https://www.rivm.nl/en).\n",
     "___"
    ]
   }
