Fixed dead link

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -18,7 +18,7 @@
     "<br>\n",
     "**- If you want to show or hide the programming code, press the button with the eye in it on the toolbar above.**  \n",
     "<br>\n",
-    "You can view the graph displaying all Jovian's disparate processes by clicking [here](files/GitHub_images/rulegraph_Jovian.png)."
+    "You can view the graph displaying all Jovian's disparate processes by clicking [here](https://github.com/DennisSchmitz/Jovian/blob/assets/images/rulegraph_Jovian.png?raw=true)."
    ]
   },
   {
