Added new Flavi and PV TT to report

--- a/Notebook_report.ipynb
+++ b/Notebook_report.ipynb
@@ -117,7 +117,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -454,6 +455,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Human Papillomavirus typing tool output:  \n",
+    "[Link to the HPV typing tool](https://www.rivm.nl/mpf/typingtool/papillomavirus/)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "if os.path.exists(\"results/all_PV-TT.csv\") and os.path.getsize(\"results/all_PV-TT.csv\") > 0:\n",
+    "    PV_TT_df = pd.read_csv(\"results/all_PV-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_PV-TT.csv\") and os.path.getsize(\"results/all_PV-TT.csv\") == 0:\n",
+    "    print(\"No viral scaffolds with family equal to \\\"Papillomaviridae\\\" were found in this dataset.\")\n",
+    "    PV_TT_df = pd.DataFrame({'NA' : [\"No\", \"Papillomaviridae\", \"family\", \"scaffolds\", \"found\"]})\n",
+    "else:\n",
+    "    print(\"The file \\\"results/all_PV-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    PV_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
+    "\n",
+    "qgrid.show_grid(PV_TT_df, show_toolbar=False, grid_options=grid_options)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Flavivirus typing tool output:  \n",
+    "[Link to the flavivirus typing tool](https://www.rivm.nl/mpf/typingtool/flavivirus/)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "init_cell": true
+   },
+   "outputs": [],
+   "source": [
+    "if os.path.exists(\"results/all_Flavi-TT.csv\") and os.path.getsize(\"results/all_Flavi-TT.csv\") > 0:\n",
+    "    Flavi_TT_df = pd.read_csv(\"results/all_Flavi-TT.csv\" , sep = \",\")\n",
+    "elif os.path.exists(\"results/all_Flavi-TT.csv\") and os.path.getsize(\"results/all_Flavi-TT.csv\") == 0:\n",
+    "    print(\"No viral scaffolds with family equal to \\\"Flaviviridae\\\" were found in this dataset.\")\n",
+    "    Flavi_TT_df = pd.DataFrame({'NA' : [\"No\", \"Flaviviridae\", \"family\", \"scaffolds\", \"found\"]})\n",
+    "else:\n",
+    "    print(\"The file \\\"results/all_Flavi-TT.csv\\\" does not exist. If you want this information, please see https://github.com/DennisSchmitz/Jovian/issues/29 for instructions.\")\n",
+    "    Flavi_TT_df = pd.DataFrame({'Error' : [\"Please\", \"see\", \"error\", \"message\", \"above\"]})\n",
+    "\n",
+    "qgrid.show_grid(Flavi_TT_df, show_toolbar=False, grid_options=grid_options)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "___\n",
     "## Scaffold viewer:\n",
     "**Containing: SNPs and minority variants (quasispecies), predicted ORFs, depth of coverage graph, GC contents graph**\n",
@@ -601,7 +662,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
